NN-1795 update prisonstaffhub api
Upgrade Libraries

Upgrade to Java 11

Remove old auth gateway code

Mirror keyworker-api config