@@ -14,9 +14,9 @@ import org.springframework.security.oauth2.client.token.grant.client.ClientCrede
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestOperations;
 import org.springframework.web.client.RestTemplate;
-import uk.gov.justice.digital.hmpps.prisonstaffhub.utils.*;
+import uk.gov.justice.digital.hmpps.prisonstaffhub.utils.JwtAuthInterceptor;
+import uk.gov.justice.digital.hmpps.prisonstaffhub.utils.UserContextInterceptor;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -24,38 +24,32 @@ public class RestTemplateConfiguration {
 
     private final OAuth2ClientContext oauth2ClientContext;
     private final ClientCredentialsResourceDetails elite2apiDetails;
-    private final ApiGatewayTokenGenerator apiGatewayTokenGenerator;
 
     @Value("${elite2.uri.root}")
-    private String elit2UriRoot;
+    private String elite2UriRoot;
 
     @Value("${elite2.api.uri.root}")
     private String apiRootUri;
 
-    @Value("${use.api.gateway.auth}")
-    private boolean useApiGateway;
-
     @Autowired
     public RestTemplateConfiguration(
-            OAuth2ClientContext oauth2ClientContext,
-            ClientCredentialsResourceDetails elite2apiDetails,
-            ApiGatewayTokenGenerator apiGatewayTokenGenerator) {
+            final OAuth2ClientContext oauth2ClientContext,
+            final ClientCredentialsResourceDetails elite2apiDetails) {
         this.oauth2ClientContext = oauth2ClientContext;
         this.elite2apiDetails = elite2apiDetails;
-        this.apiGatewayTokenGenerator = apiGatewayTokenGenerator;
     }
 
     @Bean(name = "elite2ApiRestTemplate")
-    public RestTemplate elite2ApiRestTemplate(RestTemplateBuilder restTemplateBuilder) {
+    public RestTemplate elite2ApiRestTemplate(final RestTemplateBuilder restTemplateBuilder) {
         return getRestTemplate(restTemplateBuilder, apiRootUri);
     }
 
     @Bean(name = "elite2ApiHealthRestTemplate")
-    public RestTemplate elite2ApiHealthRestTemplate(RestTemplateBuilder restTemplateBuilder) {
-        return getRestTemplate(restTemplateBuilder, elit2UriRoot);
+    public RestTemplate elite2ApiHealthRestTemplate(final RestTemplateBuilder restTemplateBuilder) {
+        return getRestTemplate(restTemplateBuilder, elite2UriRoot);
     }
 
-    private RestTemplate getRestTemplate(RestTemplateBuilder restTemplateBuilder, String uri) {
+    private RestTemplate getRestTemplate(final RestTemplateBuilder restTemplateBuilder, final String uri) {
         return restTemplateBuilder
                 .rootUri(uri)
                 .additionalInterceptors(getRequestInterceptors())
@@ -63,31 +57,17 @@ public class RestTemplateConfiguration {
     }
 
     private List<ClientHttpRequestInterceptor> getRequestInterceptors() {
-        if (useApiGateway) {
-            return Arrays.asList(
-                    new UserContextInterceptor(),
-                    new ApiGatewayInterceptor(apiGatewayTokenGenerator));
-        } else {
-            return Arrays.asList(
-                    new UserContextInterceptor(),
-                    new JwtAuthInterceptor());
-        }
+        return List.of(
+                new UserContextInterceptor(),
+                new JwtAuthInterceptor());
     }
 
     @Bean
-    public OAuth2RestTemplate elite2SystemRestTemplate(GatewayAwareAccessTokenProvider accessTokenProvider) {
+    public OAuth2RestTemplate elite2SystemRestTemplate(final GatewayAwareAccessTokenProvider accessTokenProvider) {
 
-        OAuth2RestTemplate elite2SystemRestTemplate = new OAuth2RestTemplate(elite2apiDetails, oauth2ClientContext);
-        List<ClientHttpRequestInterceptor> systemInterceptors = elite2SystemRestTemplate.getInterceptors();
+        final var elite2SystemRestTemplate = new OAuth2RestTemplate(elite2apiDetails, oauth2ClientContext);
+        final var systemInterceptors = elite2SystemRestTemplate.getInterceptors();
         systemInterceptors.add(new UserContextInterceptor());
-        if (useApiGateway) {
-            systemInterceptors.add(new ApiGatewayBatchRequestInterceptor(apiGatewayTokenGenerator));
-            // The access token provider's rest template also needs to know how to get through the gateway
-            List<ClientHttpRequestInterceptor> tokenProviderInterceptors = ((RestTemplate) accessTokenProvider.getRestTemplate()).getInterceptors();
-            tokenProviderInterceptors.add(new ApiGatewayBatchRequestInterceptor(apiGatewayTokenGenerator));
-        } else {
-            systemInterceptors.add(new JwtAuthInterceptor());
-        }
 
         elite2SystemRestTemplate.setAccessTokenProvider(accessTokenProvider);
 
